# renderer

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
include/glad/src/: glad.c
shaders/: apple_fragment.glsl  apple_vertex.glsl  basic_box_fragment.glsl  basic_box_vertex.glsl  basic_model_fragment.glsl  basic_texture_fragment.glsl  basic_texture_vertex.glsl  basic_vertex.glsl  box_fragment.glsl  box_vertex.glsl  character_fragment.glsl  character_vertex.glsl  debug_quad_depth_fragment.glsl  debug_quad_depth_vertex.glsl  default_fragment.glsl  default_vertex.glsl  depth_shader_vertex.glsl  grass_fragment.glsl  grass_vertex.glsl  ground_fragment.glsl  ground_vertex.glsl  instancing_fragment.glsl  instancing_vertex.glsl  screen_fragment.glsl  screen_vertex.glsl  shadow_vertex.glsl  sky_fragment.glsl  sky_vertex.glsl  tree_model_fragment.glsl  tree_model_vertex.glsl
src/: animation.hpp  box.hpp  camera.hpp  field.cpp  field.hpp  fragment.glsl  grass.hpp  helpers.cpp  helpers.hpp  input.hpp  instancing.cpp  main.cpp  mesh.hpp  model.cpp  model.hpp  quad.hpp  shader.hpp  sky.hpp  vertex.glsl
